--- a/Teszt/verseny/Todo
+++ b/Teszt/verseny/Todo
@@ -1,5 +1,11 @@
 - Ha van rá idõ akkor egy pehelysúlyú logrendszert lehetne írni (config részhez kéne fõleg.)
 - Dokumentációk elkészítése.
+	Kész:
+		- AboutForm
+		- Palya
+		- Splash
+		- WarningForm
+		- WarningNewGame
 - Kocsik egymás elõzésének/egymásramenetelének megoldása.
 - "Tökéletes körözés"-re való váltáskor elõfordulhat hogy ha túl meredek a kanyar ezért a dokumentációbea kell majd figyelmeztetés erre az esetre hogy ne kapcsolgassák ki be. (Legalább is ész nélkül ne)
 - "Tökéletes körözés"-re 2. Úgyan az a hiba mint az elözõ részen de itt lehetne egy pályaelhagyást vizsgálni így ha elhagyja akkor kieshetne a játékból a kocsi.
